================
Waffle Changelog
================


v0.10.2
=======

- Overhaul documentation.
- Move CLI commands to waffle_(flag|sample|switch) to be more polite.
- Add override_(flag|sample|switch) testing tools.


v0.10.1
=======

- Support Python 3.
- Support Django 1.7.
- Add WAFFLE_CACHE_NAME.
- Fix caching for empty lists.


v0.10.0
=======

- Replace waffle.get_flags with waffle.{FLAGS,SWITCHES,SAMPLES} in JS.
- Update Custom User Models for Django 1.6 support.
- Support WaffleJS inline in templates.
- Improve test infrastructure and coverage.


v0.9.2
======

- Add get_flags method to waffle.js.
- Fix issue with South migrations and custom user models in Django 1.5.
- Document command-line access and get more useful information from it.
- Support non-naive datetimes when appropriate.
- Fix a cache invalidation issue.


v0.9.1
======

- Real Django 1.5 support.
- JavaScript obeys WAFFLE_*_DEFAULT settings.

v0.9
====

- Reorganized documentation.
- Hash form values for better memcached keys.
- Simplified and improved Django template tags.
- Renamed JS functions to *_is_active to avoid reserved keywords.

v0.8.1
======

- Fix cache flushing issues.
- Fix order of flag_is_active checks.
- Add a waffle.urls module.
- Add management commands.
- Add language support to flags.
- Better caching for missing flags/switches/samples.
- Re-add 'note' field.
- Created a set_flag method to make custom flag cookie triggers easier.

v0.8
====

- Fix issue with repeated flag_is_active calls.
- Add created/modified dates to models.
- Add WAFFLE_CACHE_PREFIX settings.

v0.7.6
======

- Fix waffle template functions when no request is present.
- Added testing mode to flags.
- Add WAFFLE_*_DEFAULT for switches and samples.

v0.7.5
======

- Fix issue with stale cache using bulk admin actions.

v0.7.4
======

- Fix waffle.js in Safari.

v0.7.2
======

- Handle 404s correctly.

v0.7.1
======

- I am bad at packaging.

v0.7
====

- Add 'note' field.
- Add migrations for Samples.