@@ -65,6 +65,7 @@ WAFFLE_FLAG_DEFAULT = False
 WAFFLE_SWITCH_DEFAULT = False
 WAFFLE_SAMPLE_DEFAULT = False
 WAFFLE_OVERRIDE = False
+WAFFLE_CACHE_PREFIX = 'test:'
 
 if django.VERSION < (1, 7):
     INSTALLED_APPS += ('south', )
